--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ UnitTestingDemoApp/UnitTestingDemoApp.pro.user
 *~
 UnitTestingDemoApp/build-UnitTestingDemoApp-Desktop_Qt_5_4_0_GCC_32bit-Debug
 UnitTestingDemoApp/build-UnitTestingDemoApp-Desktop_Qt_5_4_0_GCC_32bit-Release
+UnitTestingDemoApp/test/gtest-build
+UnitTestingDemoApp/test/unit/csvparsertest
