Fixed unit tests Makefile to work with new directory structure

--- a/UnitTestingDemoApp/test/unit/Makefile
+++ b/UnitTestingDemoApp/test/unit/Makefile
@@ -1,6 +1,6 @@
 GTEST_DIR = ../gtest
 GTEST_LIB_DIR = ../gtest-build
-APP_DIR = ../..
+APP_DIR = ../../src
 
 CPPFLAGS += -I$(GTEST_DIR)/include -I$(APP_DIR)
 LDFLAGS += -L$(GTEST_LIB_DIR)
